fix student dtos responses and add loadData